<resources>
    <string name="app_name">QFS-Quarantined For Sure</string>
    <string name="title_activity_maps">QFS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="status_input_label">Status:</string>
    <string name="user_details_screen_prompt">Enter Your Details</string>
    <string name="start_date_input_button_label">Select Start Date</string>
    <string name="end_date_input_button_label">Select End Date</string>
    <string name="start_end_date_connector" >-</string>
    <string name="user_details_submit_button">Submit</string>
    <string name="signin_fail_message">Signin Unsuceesful</string>
</resources>
